# hydra

./: .env.example  .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
agent/src/: anchor-client.ts  config.ts  hydra-agent.ts  index.ts
agent/src/services/: liquidity-analysis.ts  mev-detection.ts  protocol-health.ts  token-risk.ts  wallet-analysis.ts
app/: index.html  server.ts
docs/: API.md  ARCHITECTURE.md  ECONOMIC-MODEL.md  PROGRAM.md  SECURITY.md  TESTING.md
idl/: hydra.json  hydra.ts
programs/hydra/: Cargo.toml
programs/hydra/src/: lib.rs
