[package]
name = "hydra"
version = "0.1.0"
description = "Self-replicating agent economy on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
